--- a/game.html
+++ b/game.html
@@ -866,6 +866,15 @@ function showPersonalScore() {
     personalScoreSection.style.display = "none";
   }
 }
+
+// Evita que o iframe interaja com a página principal
+window.addEventListener("blur", (event) => {
+  const activeElement = document.activeElement;
+  if (activeElement && activeElement.tagName === "IFRAME") {
+    event.preventDefault();
+    window.focus();
+  }
+});
 </script>
 </body>
 </html>
