--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
       cursor: pointer;
     }
 
+/* Evita o impacto do iframe no scroll da página principal */
+html, body {
+  overflow: hidden;
+  height: 100%;
+}
+
+.container {
+  overflow: auto; /* Permite rolagem dentro do contêiner principal */
+  height: 100%;
+}
+
     .user-icon {
       width: 40px;
       height: 40px;
@@ -214,12 +225,14 @@
     <main>
       <!-- 1) TÍTULO HANNAHGAME E IFRAME ANTES DE "Choose your level" -->
       <h2>HannahGame</h2>
-      <iframe 
-        src="game.html" 
-        width="100%" 
-        height="800px" 
-        style="border:1px solid #ccc">
-      </iframe>
+     <iframe 
+  src="game.html" 
+  width="100%" 
+  height="800px" 
+  style="border:1px solid #ccc; overflow:hidden;" 
+  scrolling="no" 
+  id="gameIframe">
+</iframe>
       <!-- Fim do iframe -->
 
       <h2>Choose your level</h2>
