--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
       background-size: 200%;
     }
 
+iframe {
+  overflow: auto;
+  pointer-events: all;
+}
+body {
+  overflow: hidden; /* Evita que o corpo principal role */
+}
+
     .levels {
       display: flex;
       flex-wrap: wrap;
@@ -503,6 +511,13 @@ html, body {
     window.addEventListener("beforeunload", function() {
       speechSynthesis.cancel();
     });
+
+ window.addEventListener("DOMContentLoaded", () => { 
+    const iframe = document.querySelector("iframe");
+    iframe.onload = () => {
+      iframe.style.height = `${iframe.contentWindow.document.body.scrollHeight}px`;
+    };
+  });
   </script>
 </body>
 </html>
