--- a/game.html
+++ b/game.html
@@ -357,7 +357,7 @@ function scrollToBoard() {
  *******************************************************/
 async function loadDictionary() {
   try {
-    const response = await fetch("dictionaries/words_alpha.txt");
+    const response = await fetch("dictionaries/Oxford 3000 Word List.txt");
     if (!response.ok) {
       throw new Error(`Failed to load dictionary: ${response.statusText}`);
     }
