--- a/index - Copy (3).html
+++ b/index - Copy (3).html
@@ -32,8 +32,6 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      /* Removido overflow:hidden aqui para permitir scroll na página principal */
-      overflow: auto;
     }
 
     /* Fundo do contêiner principal */
@@ -47,24 +45,15 @@
       background-image: url('imagens/fundo.png');
       background-repeat: repeat;
       background-size: 200%;
-
-      /* Permite rolagem interna se necessário,
-         mas geralmente confiamos no body. */
-      overflow: auto;
     }
 
-    iframe {
-      /* Ajusta para permitir que a rolagem interna aconteça no game.html */
-      border: 1px solid #ccc;
-      width: 100%;
-      height: 800px;
-    }
-
-    /* Removemos o overflow: hidden do html/body
-       para não bloquear rolagem. */
-    html, body {
-      height: 100%;
-    }
+iframe {
+  overflow: auto;
+  pointer-events: all;
+}
+body {
+  overflow: hidden; /* Evita que o corpo principal role */
+}
 
     .levels {
       display: flex;
@@ -103,6 +92,17 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       cursor: pointer;
     }
+
+/* Evita o impacto do iframe no scroll da página principal */
+html, body {
+  overflow: hidden;
+  height: 100%;
+}
+
+.container {
+  overflow: auto; /* Permite rolagem dentro do contêiner principal */
+  height: 100%;
+}
 
     .user-icon {
       width: 40px;
@@ -157,7 +157,7 @@
 
     /* Botão "PLAY" - estilo branco com canto arredondado */
     .play-button {
-      margin-top: -40px; /* ajusta conforme imagem */
+      margin-top: -40px; /* fica sobreposto na base do robô? ajusta conforme sua imagem */
       padding: 8px 16px;
       border: 2px solid #ccc;
       border-radius: 20px;
@@ -233,12 +233,14 @@
     <main>
       <!-- 1) TÍTULO HANNAHGAME E IFRAME ANTES DE "Choose your level" -->
       <h2>HannahGame</h2>
-      <!-- Ajustamos o iframe para permitir scroll interno e remover o noScrolling -->
-      <iframe 
-        src="game.html"
-        id="gameIframe"
-        scrolling="auto"
-      ></iframe>
+     <iframe 
+  src="game.html" 
+  width="100%" 
+  height="800px" 
+  style="border:1px solid #ccc; overflow:hidden;" 
+  scrolling="no" 
+  id="gameIframe">
+</iframe>
       <!-- Fim do iframe -->
 
       <h2>Choose your level</h2>
@@ -510,17 +512,12 @@
       speechSynthesis.cancel();
     });
 
-    // ------------------------------------------------------
-    // 13) Ajustes no iframe após carregar
-    // ------------------------------------------------------
-    window.addEventListener("DOMContentLoaded", () => { 
-      const iframe = document.getElementById("gameIframe");
-      iframe.onload = () => {
-        // Podemos, futuramente, ajustar a altura do iframe
-        // De momento, deixamos fixo em 800px
-        // e permitimos scroll auto do iframe
-      };
-    });
+ window.addEventListener("DOMContentLoaded", () => { 
+    const iframe = document.querySelector("iframe");
+    iframe.onload = () => {
+      iframe.style.height = `${iframe.contentWindow.document.body.scrollHeight}px`;
+    };
+  });
   </script>
 </body>
 </html>
