--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="CSS/styles.css"/>
   <!-- Manifesto para PWA -->
   <link rel="manifest" href="manifest.json"/>
+
   <!-- Firebase Libraries -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
@@ -31,6 +32,8 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
+      /* Removido overflow:hidden aqui para permitir scroll na página principal */
+      overflow: auto;
     }
 
     /* Fundo do contêiner principal */
@@ -44,6 +47,23 @@
       background-image: url('imagens/fundo.png');
       background-repeat: repeat;
       background-size: 200%;
+
+      /* Permite rolagem interna se necessário,
+         mas geralmente confiamos no body. */
+      overflow: auto;
+    }
+
+    iframe {
+      /* Ajusta para permitir que a rolagem interna aconteça no game.html */
+      border: 1px solid #ccc;
+      width: 100%;
+      height: 800px;
+    }
+
+    /* Removemos o overflow: hidden do html/body
+       para não bloquear rolagem. */
+    html, body {
+      height: 100%;
     }
 
     .levels {
@@ -137,7 +157,7 @@
 
     /* Botão "PLAY" - estilo branco com canto arredondado */
     .play-button {
-      margin-top: -40px; /* fica sobreposto na base do robô? ajusta conforme sua imagem */
+      margin-top: -40px; /* ajusta conforme imagem */
       padding: 8px 16px;
       border: 2px solid #ccc;
       border-radius: 20px;
@@ -155,28 +175,28 @@
       background-color: #eee;
     }
 
-    /* Centraliza a imagem de convite (agora sempre animada) */
-    .invitation-container {
-      display: none; /* só aparece se não logado */
-      justify-content: center;
-      align-items: center;
-      margin: 20px 0; /* Espaçamento */
-    }
+  /* Centraliza as imagens de convite e jogos (agora sempre animadas) */
+.invitation-container {
+  display: none; /* só aparece se não logado */
+  justify-content: center; /* Centraliza os itens horizontalmente */
+  align-items: center; /* Alinha os itens verticalmente */
+  gap: 20px; /* Espaçamento horizontal entre as imagens */
+  margin: 20px 0; /* Espaçamento vertical */
+}
 
-    .invitation-button {
-      max-width: 80%;
-      height: auto;
-      cursor: pointer;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      transition: all 0.3s ease;
-    }
+.invitation-button, .free-games-button {
+  max-width: 40%; /* Reduz o tamanho para caber ambas imagens lado a lado */
+  height: auto;
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease;
+}
 
-    .invitation-button:hover {
-      transform: scale(1.05);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-    }
-
+.invitation-button:hover, .free-games-button:hover {
+  transform: scale(1.05); /* Aumenta o tamanho ao passar o mouse */
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
   </style>
 </head>
 
@@ -205,13 +225,27 @@
 
     <!-- O CONVITE.GIF (roda direto) só aparece se não logado -->
     <div class="invitation-container" id="invitationContainer">
-      <img src="imagens/convite.gif" 
-           alt="Convite Animado" 
-           class="invitation-button" 
-           id="invitationButton"/>
-    </div>
+  <img src="imagens/convite.gif" 
+       alt="Convite Animado" 
+       class="invitation-button" 
+       id="invitationButton"/>
+  <img src="imagens/Free_Games.gif" 
+       alt="Jogos Grátis" 
+       class="free-games-button" 
+       id="freeGamesButton"/>
+</div>
 
     <main>
+      <!-- 1) TÍTULO HANNAHGAME E IFRAME ANTES DE "Choose your level" -->
+      <h2>HannahGame</h2>
+      <!-- Ajustamos o iframe para permitir scroll interno e remover o noScrolling -->
+      <iframe 
+        src="game.html"
+        id="gameIframe"
+        scrolling="auto"
+      ></iframe>
+      <!-- Fim do iframe -->
+
       <h2>Choose your level</h2>
       <div class="levels">
         <a href="Level0/index.html" class="level-button level0" id="Level0"></a>
@@ -238,13 +272,16 @@
       appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
       measurementId: "G-07VVJG9LRS"
     };
-    firebase.initializeApp(firebaseConfig);
+    // Evitar erro de inicialização dupla:
+    if (!firebase.apps.length) {
+      firebase.initializeApp(firebaseConfig);
+    }
 
     // ------------------------------------------------------
     // 2) Variáveis globais TTS
     // ------------------------------------------------------
-    let englishVoice = null;     // Armazena alguma voz "en"
-    let hasEnglishVoice = false; // Se existe ao menos 1 voz com "en"
+    let englishVoice = null;     
+    let hasEnglishVoice = false; 
 
     // ------------------------------------------------------
     // 3) Função para buscar voz em inglês
@@ -252,7 +289,6 @@
     function pickAnyEnglishVoice() {
       const voices = speechSynthesis.getVoices() || [];
       for (let v of voices) {
-        // Ex.: "en-US", "en-GB", "en-AU"
         if (v.lang.toLowerCase().includes("en")) {
           hasEnglishVoice = true;
           return v;
@@ -266,29 +302,23 @@
     // 4) Fala do robô ao clicar em "PLAY"
     // ------------------------------------------------------
     function speakRobotMessage() {
-      // Mensagem
       const text = "Hi, I'm Samuel, your friendly English helper! Click that bouncy button to discover the best way to learn English, or log in to start studying! Let's learn together!";
       const utterance = new SpeechSynthesisUtterance(text);
 
-      // Se achou voz em inglês, aplica
       if (englishVoice) {
         utterance.voice = englishVoice;
       }
 
-      // Ao iniciar fala -> muda para robo_fala.gif
       utterance.onstart = function() {
         const roboImage = document.getElementById("roboImage");
         roboImage.src = "imagens/robo_fala.gif";
       };
 
-      // Ao terminar fala -> volta robo_estatico.png
       utterance.onend = function() {
         const roboImage = document.getElementById("roboImage");
         roboImage.src = "imagens/robo_estatico.png";
       };
 
-      // Se não tiver nenhuma voz "en", ainda fala com a voz padrão do sistema. 
-      // Dispara a fala
       speechSynthesis.speak(utterance);
     }
 
@@ -299,12 +329,12 @@
       const loginLink = document.getElementById("loginLink");
       const userDropdown = document.getElementById("userDropdown");
 
-      const roboContainer      = document.getElementById("roboContainer");
+      const roboContainer       = document.getElementById("roboContainer");
       const invitationContainer = document.getElementById("invitationContainer");
 
       if (user) {
-        // Usuário logado => esconde tudo
-        roboContainer.style.display      = "none";
+        // Usuário logado => esconde robô + convite
+        roboContainer.style.display       = "none";
         invitationContainer.style.display = "none";
 
         // Carrega dados do user no BD
@@ -312,10 +342,15 @@
         userRef.once("value").then((snapshot) => {
           const userData = snapshot.val() || {};
           const userName = userData.nome || user.email;
-          const userAvatar = userData.avatar ? `imagens/${userData.avatar}` : "imagens/bonecologin1.png";
+          const userAvatar = userData.avatar 
+            ? `imagens/${userData.avatar}`
+            : "imagens/bonecologin1.png";
 
           // Atualiza a interface do usuário
-          loginLink.innerHTML = `<img src="${userAvatar}" alt="User Icon" class="user-icon"><p class="user-name">${userName}</p>`;
+          loginLink.innerHTML = `
+            <img src="${userAvatar}" alt="User Icon" class="user-icon">
+            <p class="user-name">${userName}</p>
+          `;
           loginLink.removeAttribute("href");
 
           // Define o dashboard
@@ -343,9 +378,10 @@
                   professorData.turmas[turmaId].students &&
                   professorData.turmas[turmaId].students[alunoId];
 
-                const nivelLiberado = profStudent && profStudent.nivel_em_curso
-                                      ? profStudent.nivel_em_curso
-                                      : null;
+                const nivelLiberado = (profStudent && profStudent.nivel_em_curso)
+                  ? profStudent.nivel_em_curso
+                  : null;
+
                 if (nivelLiberado) {
                   liberarNiveis([nivelLiberado]);
                 } else {
@@ -378,8 +414,8 @@
           });
         });
       } else {
-        // Não está logado => exibe robô + convite
-        roboContainer.style.display      = "flex";
+        // Não está logado => mostra robô + convite
+        roboContainer.style.display       = "flex";
         invitationContainer.style.display = "flex";
 
         loginLink.setAttribute("href", "Formulario/login.html");
@@ -414,7 +450,7 @@
     // ------------------------------------------------------
     document.getElementById("loginContainer").addEventListener("click", function(event) {
       const user = firebase.auth().currentUser;
-      if (!user) return; // Evita abrir dropdown se não estiver logado
+      if (!user) return; 
       event.preventDefault();
       const dropdown = document.getElementById("userDropdown");
       dropdown.style.display = (dropdown.style.display === "none" || dropdown.style.display === "") ? "block" : "none";
@@ -429,6 +465,15 @@
         window.location.href = "Apresentacao/propaganda.html";
       });
     });
+
+document.addEventListener("DOMContentLoaded", function() { 
+  // Configuração do botão Free_Games.gif
+  const freeGamesButton = document.getElementById("freeGamesButton");
+  freeGamesButton.addEventListener("click", function() {
+    // Redirecionar para a página de jogos grátis
+    window.location.href = "https://hannahenglishcourse.vercel.app/game.html";
+  });
+});
 
     // ------------------------------------------------------
     // 9) Fecha o dropdown ao clicar fora dele
@@ -448,7 +493,7 @@
       if (event.target.id === "logout") {
         firebase.auth().signOut().then(() => {
           console.log("Usuário deslogado");
-          location.reload(); // Recarrega a página após deslogar
+          location.reload(); 
         }).catch((error) => {
           console.error("Erro ao deslogar:", error);
         });
@@ -477,6 +522,18 @@
     // ------------------------------------------------------
     window.addEventListener("beforeunload", function() {
       speechSynthesis.cancel();
+    });
+
+    // ------------------------------------------------------
+    // 13) Ajustes no iframe após carregar
+    // ------------------------------------------------------
+    window.addEventListener("DOMContentLoaded", () => { 
+      const iframe = document.getElementById("gameIframe");
+      iframe.onload = () => {
+        // Podemos, futuramente, ajustar a altura do iframe
+        // De momento, deixamos fixo em 800px
+        // e permitimos scroll auto do iframe
+      };
     });
   </script>
 </body>
