--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
       overflow: auto;
     }
 
-    iframe {
-      /* Ajusta para permitir que a rolagem interna aconteça no game.html */
-      border: 1px solid #ccc;
-      width: 100%;
-      height: 800px;
-    }
+.subtitle {
+  margin-top: 40px; /* Adiciona espaçamento acima do subtítulo */
+  font-family: Arial, sans-serif; /* Mesma fonte do título */
+  font-size: 24px; /* Ajuste o tamanho da fonte, se necessário */
+  font-weight: bold; /* Mesmo peso do título */
+  color: #333; /* Mesma cor do título */
+  text-align: center; /* Alinha o texto ao centro */
+}    
 
     /* Removemos o overflow: hidden do html/body
        para não bloquear rolagem. */
@@ -236,7 +238,7 @@
 </div>
 
     <main>          
-      <h2>Choose your level</h2>
+     <h2 class="subtitle">Choose your level</h2>
       <div class="levels">
         <a href="Level0/index.html" class="level-button level0" id="Level0"></a>
         <a href="Level1/index.html" class="level-button levelA" id="Level1"></a>
