--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
     /* Contêiner para o robô e botão (logo abaixo do título) */
     .robo-container {
-      display: none; /* só aparece se não logado */
+      display: flex; /* só aparece se não logado */
       flex-direction: column;
       align-items: center;
       margin: 20px auto;
@@ -179,7 +179,7 @@
 
   /* Centraliza as imagens de convite e jogos (agora sempre animadas) */
 .invitation-container {
-  display: none; /* só aparece se não logado */
+  display: flex; /* só aparece se não logado */
   justify-content: center; /* Centraliza os itens horizontalmente */
   align-items: center; /* Alinha os itens verticalmente */
   gap: 20px; /* Espaçamento horizontal entre as imagens */
@@ -326,8 +326,8 @@
 
       if (user) {
         // Usuário logado => esconde robô + convite
-        roboContainer.style.display       = "none";
-        invitationContainer.style.display = "none";
+        roboContainer.style.display       = "flex";
+        invitationContainer.style.display = "flex";
 
         // Carrega dados do user no BD
         const userRef = firebase.database().ref("usuarios/" + user.uid);
