--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
 </div>
 
     <main>          
+     <h2 class="subtitle">Login and Start Learning English While Playing</h2>
      <h2 class="subtitle">Choose your level</h2>
       <div class="levels">
         <a href="Level0/index.html" class="level-button level0" id="Level0"></a>
