--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
 </div>
 
     <main>          
-     <h2 class="subtitle">Login and Start Learning English While Playing</h2>
-     <h2 class="subtitle">Choose your level</h2>
+     <h2 class="header h1">Login and Start Learning English While Playing</h2>
+     <h2 class="header h1">Choose your level and Start Learning English While Playing</h2>
       <div class="levels">
         <a href="Level0/index.html" class="level-button level0" id="Level0"></a>
         <a href="Level1/index.html" class="level-button levelA" id="Level1"></a>
