--- a/index.html
+++ b/index.html
@@ -238,8 +238,9 @@
 </div>
 
     <main>          
-     <h2 class="subtitle">Login and Start Learning English While Playing</h2>
-     <h2 class="subtitle">Choose your level and Start Learning English While Playing</h2>
+   <h2 class="subtitle" id="subtitleLoggedOut">Login and Start Learning English While Playing</h2>
+<h2 class="subtitle" id="subtitleLoggedIn" style="display: none;">Choose your level and Start Learning English While Playing</h2>
+
       <div class="levels">
         <a href="Level0/index.html" class="level-button level0" id="Level0"></a>
         <a href="Level1/index.html" class="level-button levelA" id="Level1"></a>
@@ -325,7 +326,14 @@
       const roboContainer       = document.getElementById("roboContainer");
       const invitationContainer = document.getElementById("invitationContainer");
 
-      if (user) {
+  const subtitleLoggedOut = document.getElementById("subtitleLoggedOut");
+  const subtitleLoggedIn = document.getElementById("subtitleLoggedIn");
+
+  if (user) {
+    // Usuário logado: mostrar o subtítulo "Choose your level"
+    subtitleLoggedOut.style.display = "none";
+    subtitleLoggedIn.style.display = "block";   
+       
         // Usuário logado => esconde robô + convite
         roboContainer.style.display       = "flex";
         invitationContainer.style.display = "flex";
@@ -407,6 +415,9 @@
           });
         });
       } else {
+        // Usuário deslogado: mostrar o subtítulo "Login and Start Learning"
+        subtitleLoggedOut.style.display = "block";
+        subtitleLoggedIn.style.display = "none";
         // Não está logado => mostra robô + convite
         roboContainer.style.display       = "flex";
         invitationContainer.style.display = "flex";
