--- a/index.html
+++ b/index.html
@@ -521,6 +521,19 @@ document.addEventListener("DOMContentLoaded", function() {
       playBtn.addEventListener("click", speakRobotMessage);
     });
 
+document.addEventListener("DOMContentLoaded", function() {
+  const subtitleLoggedOut = document.getElementById("subtitleLoggedOut");
+
+  // Adiciona evento de clique no subtítulo "Login and Start Learning"
+  subtitleLoggedOut.addEventListener("click", function() {
+    // Faz o scroll para o topo da página
+    window.scrollTo({
+      top: 0,       // Define a posição vertical para 0 (topo)
+      behavior: "smooth" // Faz o scroll suave
+    });
+  });
+});
+
     // ------------------------------------------------------
     // 12) Parar TTS ao sair da página (opcional)
     // ------------------------------------------------------
