--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     // 4) Fala do robô ao clicar em "PLAY"
     // ------------------------------------------------------
     function speakRobotMessage() {
-      const text = "Hi, I'm Samuel, your friendly English helper! Click that bouncy button to discover the best way to learn English, or log in to start studying! Let's learn together!";
+      const text = "Hi, I'm Samuel! Click to discover the best and most fun way to learn English, or join us to play an exciting game!";
       const utterance = new SpeechSynthesisUtterance(text);
 
       if (englishVoice) {
